package eu.venthe.pipeline.orchestrator.modules.automation.workflows;

public interface Runner {
}
