package eu.venthe.platform.workflow.runs.dependencies;

public interface Actor {
}
